# gan-mg-doping-workflow

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
contracts/: all_mechanisms_gibbs_summary.contract.json  crossover_uncertainty.contract.json  gibbs_summary.contract.json  gibbs_uncertainty.contract.json  mechanism_crossover.contract.json  mixing_athermal_summary.contract.json  per_structure.contract.json  per_structure_mixing.contract.json  phase_map.contract.json
data/golden/v1/: README.md
docs/: README.md  api-usage.md  cli-usage.md  ensemble_diagnostics.md  gallery.md  hpc_mapping.md  index.md  installation.md  numerical_stability.md  output-contract-validation.md  output-contracts.md  performance-scaling.md  performance.md  repository-readme.md  reproducibility-philosophy.md  reproducibility.md  results_demo.md  scaling_streaming.md  science_definitions.md  thermodynamics-math.md
docs/examples/: thermo_analysis_synthetic.ipynb
docs/javascripts/: mermaid.js
docs/performance/: benchmarks.md
docs/workflows/: minimal_end_to_end.md
examples/minimal_end_to_end/: README.md  run_config.toml  run_example.py  run_manifest.sample.json
scripts/: 00_smoke_test.ps1  00_smoke_test.sh  01_generate_structures.py  04_boltzmann_analysis.py  benchmark_thermo.py  generate_golden.py
src/gan_mg/: __init__.py  _mpl.py  _toml.py  api.py  artifacts.py  cli.py  contracts.py  import_results.py  payloads.py  run.py  run_config.py  validation.py
src/gan_mg/analysis/: crossover.py  crossover_uncertainty.py  figures.py  phase_boundary.py  phase_map.py  (+1 more)
tests/: test_api.py  test_benchmarks_smoke.py  test_cli.py  test_contracts_compatibility.py  test_crossover.py  test_demo.py  test_generate_golden.py  test_gibbs.py  test_golden_inputs.py  test_golden_inputs_load.py  test_golden_regression.py  test_minimal_end_to_end_example.py  test_mixing.py  test_models.py  test_notebook_parity_golden.py  test_output_validation.py  test_per_structure.py  test_phase_boundary.py  test_phase_map.py  test_report.py  test_run_config.py  test_runs_cli.py  test_streaming_parity.py  test_thermo.py  test_uncertainty.py  test_version.py  test_version_cli.py
(+57 files in other folders)
