[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]
plot = ["matplotlib>=3.8"]

[project]
name = "gan-mg-doping-workflow"
# Single source of truth for package/release version.
version = "0.1.0"
description = "Scientific ML workflow for Mg-doped GaN: structure generation, relaxation, and thermodynamic analysis."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
ganmg = "gan_mg.cli:main"
