[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "mypy>=1.11", "pandas-stubs>=2.2"]
plot = ["matplotlib>=3.8"]
# Optional documentation toolchain (MkDocs + Material theme + pymdownx extensions).
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5", "pymdown-extensions>=10.0"]

[project]
name = "gan-mg-doping-workflow"
# Single source of truth for package/release version.
version = "0.1.0"
description = "Scientific ML workflow for Mg-doped GaN: structure generation, relaxation, and thermodynamic analysis."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pandas>=2.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
ganmg = "gan_mg.cli:main"


[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["matplotlib", "matplotlib.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pandas", "pandas.*"]
ignore_missing_imports = true
